--- a/character.html
+++ b/character.html
@@ -1,93 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Comparar Personajes - Inazuma Eleven</title>
+  <meta charset="UTF-8">
+  <title>Personaje - Victory Road Team Builder</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Tailwind y FontAwesome solo se usan para el panel de stats, pero puedes dejarlos aquí si quieres -->
+  <link rel="stylesheet" href="styles.css">
   <style>
-    body { font-family: Lexend, sans-serif; background: #fff; color: #222; }
-    h1 { text-align: center; }
-    .compare-container { display: flex; justify-content: center; gap: 40px; margin-top: 30px; }
-    .character-select { width: 250px; }
-    .character-card { background: #f2f2f2; border-radius: 10px; padding: 10px; text-align: center; margin-top: 20px; }
-    .character-card img { width: 120px; height: 120px; object-fit: contain; }
-    .vs { font-size: 40px; font-weight: bold; align-self: center; }
-    .select-label { font-weight: bold; }
+    body { font-family: 'Segoe UI', Arial, sans-serif; background: #fff; color: #222; margin: 0; }
+    .container { max-width: 600px; margin: 0 auto; padding: 2rem; }
+    .back { margin-bottom: 2rem; display: block; color: #2196f3; text-decoration: none; font-size: 1rem;}
+    .char-detail-card {
+      background: #f9f9f9;
+      border-radius: 16px;
+      box-shadow: 0 2px 10px #ececec;
+      padding: 2rem;
+      text-align: center;
+    }
+    .char-img-lg {
+      width: 200px;
+      height: 200px;
+      object-fit: contain;
+      background: #fff;
+      border-radius: 16px;
+      margin-bottom: 1.2rem;
+      border: 1px solid #eee;
+    }
+    .char-name-lg { font-size: 2rem; font-weight: 700; margin-bottom: 1.2rem; letter-spacing: 1px; }
+    .char-icons-lg { display: flex; justify-content: center; align-items: center; gap: 1.2rem; margin-bottom: 1.2rem; }
+    .char-icons-lg img { width: 40px; height: 40px; object-fit: contain; }
+    .char-desc { font-size: 1.1rem; color: #555; }
+    @media (max-width: 600px) {
+      .container { padding: 1rem; }
+      .char-img-lg { width: 130px; height: 130px; }
+      .char-name-lg { font-size: 1.3rem; }
+      .char-icons-lg img { width: 28px; height: 28px; }
+    }
   </style>
 </head>
 <body>
-  <h1>Comparar Personajes</h1>
-  <div class="compare-container">
-    <div>
-      <div class="select-label">Personaje 1</div>
-      <select id="select1" class="character-select"></select>
-      <div id="card1" class="character-card"></div>
+  <div class="container">
+    <a href="index.html" class="back">← Volver a la lista</a>
+    <div class="char-detail-card" id="char-detail-card">
+      <!-- Detalles generados por JS -->
     </div>
-    <div class="vs">VS</div>
-    <div>
-      <div class="select-label">Personaje 2</div>
-      <select id="select2" class="character-select"></select>
-      <div id="card2" class="character-card"></div>
-    </div>
+    <div id="param-panel"></div>
   </div>
-
-  <script>
-    let allCharacters = {};
-
-    function createOption(name) {
-      const opt = document.createElement("option");
-      opt.value = name;
-      opt.textContent = name.replace(/_/g, " ");
-      return opt;
-    }
-
-    function renderCard(cardId, char) {
-      const card = document.getElementById(cardId);
-      if (!char) {
-        card.innerHTML = "<em>Selecciona un personaje</em>";
-        return;
-      }
-      card.innerHTML = `
-        <img src="sprites/characters/${char.name}.png" alt="${char.name}">
-        <div><strong>${char.name.replace(/_/g, " ")}</strong></div>
-        <div>Posición: <img src="sprites/positions/${char.position}.png" width="20"> ${char.position.toUpperCase()}</div>
-        <div>Afinidad: <img src="sprites/affinities/${char.affinity}.png" width="20"> ${char.affinity.charAt(0).toUpperCase() + char.affinity.slice(1)}</div>
-        <div>Género: <img src="sprites/gender/${char.gender}.png" width="20"> ${char.gender === "male" ? "Masculino" : "Femenino"}</div>
-        ${char.stats ? `
-          <div>Estadísticas:</div>
-          <ul>
-            <li>Ofensa: ${char.stats.attack ?? "-"}</li>
-            <li>Defensa: ${char.stats.defense ?? "-"}</li>
-            <li>Velocidad: ${char.stats.speed ?? "-"}</li>
-            <!-- Añade más estadísticas si existen -->
-          </ul>
-        ` : ""}
-      `;
-    }
-
-    function handleSelection() {
-      const v1 = document.getElementById("select1").value;
-      const v2 = document.getElementById("select2").value;
-      renderCard("card1", allCharacters[v1]);
-      renderCard("card2", allCharacters[v2]);
-    }
-
-    fetch("data/characters.json")
-      .then(res => res.json())
-      .then(data => {
-        allCharacters = data;
-        const sortedNames = Object.keys(allCharacters).sort();
-        const select1 = document.getElementById("select1");
-        const select2 = document.getElementById("select2");
-        select1.appendChild(createOption(""));
-        select2.appendChild(createOption(""));
-        sortedNames.forEach(name => {
-          select1.appendChild(createOption(name));
-          select2.appendChild(createOption(name));
-        });
-        select1.addEventListener("change", handleSelection);
-        select2.addEventListener("change", handleSelection);
-      });
-  </script>
+  <script src="js/main.js"></script>
 </body>
 </html>
